--- a/Algoritmos_AG1.ipynb
+++ b/Algoritmos_AG1.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "toc_visible": true,
       "mount_file_id": "103rQzq-wcyDI41y9PqNnntxB5Oy-1EjP",
-      "authorship_tag": "ABX9TyOsfCP3QDvRhH/AX1JMVKex",
+      "authorship_tag": "ABX9TyMVhb+0q2VMTdM2CGFNxyjw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -57,7 +57,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "dEWCqXMyohxu",
-        "outputId": "1adaa86b-9f2c-4319-b593-f515c9f2ca12"
+        "outputId": "00eba212-7a41-49a0-8384-c7fc6b16c4d2"
       },
       "source": [
         "def Torres_Hanoi(N, desde, hasta):\r\n",
@@ -70,7 +70,7 @@
         "\r\n",
         "Torres_Hanoi(3, 1, 3)"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -103,7 +103,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "E27Six585xMK",
-        "outputId": "0a5cee8e-130a-411a-8f4a-2363af05f574"
+        "outputId": "0ac33d8f-791e-4aae-8232-1340265bd59c"
       },
       "source": [
         "def cambio_monedas(N, SM):\r\n",
@@ -119,7 +119,7 @@
         "\r\n",
         "cambio_monedas(37, [25, 10, 5, 1])"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -131,7 +131,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 11
+          "execution_count": 3
         }
       ]
     },
@@ -151,7 +151,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "xf5lNSfI_ML-",
-        "outputId": "6384ac99-b992-4a61-e884-56b1545eb903"
+        "outputId": "01f2b194-b320-47df-d1a8-a833df037336"
       },
       "source": [
         "def escribe(S):\r\n",
@@ -216,7 +216,7 @@
         "\r\n",
         "reinas(4)"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -256,7 +256,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "30471ea9-6308-4c97-e1d5-ff6e781c2055"
+        "outputId": "18db28b6-32cd-4744-af19-3ccfd1080645"
       },
       "source": [
         "# Generar lista de puntos de una dimensión\r\n",
@@ -265,29 +265,29 @@
         "List2D = [(random.randrange(1,1000), random.randrange(1,1000))  for x in range(10)]\r\n",
         "List1D, List2D"
       ],
-      "execution_count": 2,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "([911, 745, 185, 889, 752, 274, 714, 304, 284, 946],\n",
-              " [(207, 438),\n",
-              "  (491, 6),\n",
-              "  (10, 292),\n",
-              "  (617, 624),\n",
-              "  (993, 34),\n",
-              "  (529, 90),\n",
-              "  (630, 650),\n",
-              "  (244, 677),\n",
-              "  (771, 894),\n",
-              "  (684, 850)])"
+              "([743, 286, 232, 640, 955, 797, 426, 138, 565, 811],\n",
+              " [(569, 832),\n",
+              "  (906, 901),\n",
+              "  (8, 574),\n",
+              "  (976, 432),\n",
+              "  (125, 533),\n",
+              "  (931, 171),\n",
+              "  (923, 981),\n",
+              "  (120, 263),\n",
+              "  (908, 283),\n",
+              "  (853, 413)])"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 2
+          "execution_count": 5
         }
       ]
     },
@@ -311,7 +311,7 @@
         "  return math.sqrt(suma)\r\n",
         " "
       ],
-      "execution_count": 18,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -321,7 +321,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FtHA7sLGVrJ-",
-        "outputId": "983a3d12-9e38-46db-f49e-6de30ef82df3"
+        "outputId": "147e03c2-1769-4d31-e1df-938f26417b67"
       },
       "source": [
         "# comparar distáncias por fuerza bruta\r\n",
@@ -332,7 +332,7 @@
         "    j = i + 1\r\n",
         "    while j < len(listDistance):\r\n",
         "      dist1d = Dist1D(listDistance[i],listDistance[j])\r\n",
-        "      print(str(i) + \", \"  + str(j))\r\n",
+        "      # print(str(i) + \", \"  + str(j))\r\n",
         "      if i == 0 and j == 1:\r\n",
         "        mindsit = dist1d\r\n",
         "      elif mindsit > dist1d:\r\n",
@@ -343,57 +343,12 @@
         "\r\n",
         "print(\"Distáncia mínima: \" + str(MinDistFuerzaBruta(List1D)))"
       ],
-      "execution_count": 11,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "0, 1\n",
-            "0, 2\n",
-            "0, 3\n",
-            "0, 4\n",
-            "0, 5\n",
-            "0, 6\n",
-            "0, 7\n",
-            "0, 8\n",
-            "0, 9\n",
-            "1, 2\n",
-            "1, 3\n",
-            "1, 4\n",
-            "1, 5\n",
-            "1, 6\n",
-            "1, 7\n",
-            "1, 8\n",
-            "1, 9\n",
-            "2, 3\n",
-            "2, 4\n",
-            "2, 5\n",
-            "2, 6\n",
-            "2, 7\n",
-            "2, 8\n",
-            "2, 9\n",
-            "3, 4\n",
-            "3, 5\n",
-            "3, 6\n",
-            "3, 7\n",
-            "3, 8\n",
-            "3, 9\n",
-            "4, 5\n",
-            "4, 6\n",
-            "4, 7\n",
-            "4, 8\n",
-            "4, 9\n",
-            "5, 6\n",
-            "5, 7\n",
-            "5, 8\n",
-            "5, 9\n",
-            "6, 7\n",
-            "6, 8\n",
-            "6, 9\n",
-            "7, 8\n",
-            "7, 9\n",
-            "8, 9\n",
-            "Distáncia mínima: 9.899494936611665\n"
+            "Distáncia mínima: 19.79898987322333\n"
           ],
           "name": "stdout"
         }
@@ -416,7 +371,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "loL-UKAYLYrR",
-        "outputId": "3d223153-307b-4251-f9da-97c2ec97ce44"
+        "outputId": "b50e103e-3bab-46f6-e517-5a232ab88484"
       },
       "source": [
         "#Comparar la distancia por divide y venceras 1D\r\n",
@@ -437,35 +392,14 @@
         "  d3 = MinDistFuerzaBruta([p[-1],q[0]])\r\n",
         "  dMin = min(d1,d2,d3)\r\n",
         "  return dMin\r\n",
-        "print(DivideVenceras1D(List1D))"
+        "print(\"Distáncia mínima: \" + str(DivideVenceras1D(List1D)))"
       ],
-      "execution_count": 23,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "0, 1\n",
-            "0, 2\n",
-            "0, 3\n",
-            "0, 4\n",
-            "1, 2\n",
-            "1, 3\n",
-            "1, 4\n",
-            "2, 3\n",
-            "2, 4\n",
-            "3, 4\n",
-            "0, 1\n",
-            "0, 2\n",
-            "0, 3\n",
-            "0, 4\n",
-            "1, 2\n",
-            "1, 3\n",
-            "1, 4\n",
-            "2, 3\n",
-            "2, 4\n",
-            "3, 4\n",
-            "0, 1\n",
-            "9.899494936611665\n"
+            "Distáncia mínima: 19.79898987322333\n"
           ],
           "name": "stdout"
         }
@@ -487,7 +421,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "BOgTLqt-fRT0",
-        "outputId": "e9119013-69e6-4761-dff0-142e8cdfb4a6"
+        "outputId": "a344485f-3557-4562-df51-618edf64e13b"
       },
       "source": [
         "# calcular la ditancia entre dos puntos de ND\r\n",
@@ -498,7 +432,7 @@
         "    j = i + 1\r\n",
         "    while j < len(listDistance):\r\n",
         "      dist = distancia(listDistance[i],listDistance[j])\r\n",
-        "      print(str(i) + \", \"  + str(j))\r\n",
+        "      #print(str(i) + \", \"  + str(j))\r\n",
         "      if i == 0 and j == 1:\r\n",
         "        mindsit = dist\r\n",
         "      elif mindsit > dist:\r\n",
@@ -509,57 +443,12 @@
         "\r\n",
         "print(\"Distáncia mínima: \" + str(MinDistFuerzaBrutaNdim(List2D)))"
       ],
-      "execution_count": 21,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "0, 1\n",
-            "0, 2\n",
-            "0, 3\n",
-            "0, 4\n",
-            "0, 5\n",
-            "0, 6\n",
-            "0, 7\n",
-            "0, 8\n",
-            "0, 9\n",
-            "1, 2\n",
-            "1, 3\n",
-            "1, 4\n",
-            "1, 5\n",
-            "1, 6\n",
-            "1, 7\n",
-            "1, 8\n",
-            "1, 9\n",
-            "2, 3\n",
-            "2, 4\n",
-            "2, 5\n",
-            "2, 6\n",
-            "2, 7\n",
-            "2, 8\n",
-            "2, 9\n",
-            "3, 4\n",
-            "3, 5\n",
-            "3, 6\n",
-            "3, 7\n",
-            "3, 8\n",
-            "3, 9\n",
-            "4, 5\n",
-            "4, 6\n",
-            "4, 7\n",
-            "4, 8\n",
-            "4, 9\n",
-            "5, 6\n",
-            "5, 7\n",
-            "5, 8\n",
-            "5, 9\n",
-            "6, 7\n",
-            "6, 8\n",
-            "6, 9\n",
-            "7, 8\n",
-            "7, 9\n",
-            "8, 9\n",
-            "Distáncia mínima: 13.0\n"
+            "Distáncia mínima: 2.0\n"
           ],
           "name": "stdout"
         }
@@ -572,7 +461,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FrSkpnyxjVg0",
-        "outputId": "b9e12484-789c-436c-8c2f-2d826d2c62e6"
+        "outputId": "eeda5803-806a-46bb-c4eb-c28a7d1d30d1"
       },
       "source": [
         "def takefirst(elem):\r\n",
@@ -610,50 +499,18 @@
         "          break\r\n",
         "    else:\r\n",
         "      break\r\n",
+        "  return mindist\r\n",
         "\r\n",
-        "  return dMin\r\n",
-        "\r\n",
-        "DivideVencerasND(List2D)  "
+        "print(\"Distáncia mínima: \" + str(DivideVencerasND(List2D)))"
       ],
-      "execution_count": 35,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "0, 1\n",
-            "0, 2\n",
-            "0, 3\n",
-            "0, 4\n",
-            "1, 2\n",
-            "1, 3\n",
-            "1, 4\n",
-            "2, 3\n",
-            "2, 4\n",
-            "3, 4\n",
-            "0, 1\n",
-            "0, 2\n",
-            "0, 3\n",
-            "0, 4\n",
-            "1, 2\n",
-            "1, 3\n",
-            "1, 4\n",
-            "2, 3\n",
-            "2, 4\n",
-            "3, 4\n"
+            "Distáncia mínima: 2.0\n"
           ],
           "name": "stdout"
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "9.899494936611665"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 35
         }
       ]
     },
@@ -665,6 +522,17 @@
       "source": [
         "*Se podria mejorar en el caso de tener muchos valores dividiendo aún mas el algorimto*"
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "7ak9F4SWDm_u"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
