--- a/Algoritmos_AG2_R.ipynb
+++ b/Algoritmos_AG2_R.ipynb
@@ -6,7 +6,7 @@
       "name": "Algoritmos_AG2_R.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOgUOQoTvRiHf29rBR+oxGG",
+      "authorship_tag": "ABX9TyMFKACK42LT7sx8Fj9iIoS1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -193,7 +193,6 @@
         "id": "BJwO0IQ_9O21"
       },
       "source": [
-        "\r\n",
         "coste2=[[11,12,18,40],\r\n",
         "        [14,15,13,22],\r\n",
         "        [11,17,19,23],\r\n",
@@ -248,7 +247,6 @@
       },
       "source": [
         "#Coste inferior para soluciones parciales\r\n",
-        "#  (1,3,) Se asigna la tarea 1 al agente 0 y la tarea 3 al agente 1\r\n",
         "\r\n",
         "def CosteInferior(s,costes):\r\n",
         "  valor = 0\r\n",
@@ -272,8 +270,7 @@
         "    valor += max( [ costes[j][i] for j in range(len(s), len(costes))  ])\r\n",
         "  return valor\r\n",
         "\r\n",
-        "CosteSuperior((0,1),coste2)\r\n",
-        "\r\n"
+        "CosteSuperior((0,1),coste2)\r\n"
       ],
       "execution_count": null,
       "outputs": [
@@ -535,9 +532,7 @@
         "\r\n",
         "costMin, convMin = AsignacionTareasFuerzaBruta(coste2)\r\n",
         "\r\n",
-        "costMin, convMin\r\n",
-        "\r\n",
-        "\r\n"
+        "costMin, convMin\r\n"
       ],
       "execution_count": null,
       "outputs": [
@@ -575,8 +570,6 @@
         "outputId": "24c57855-98b8-4698-ecbc-12b84acd4644"
       },
       "source": [
-        "\r\n",
-        "\r\n",
         "def CostesN(n):\r\n",
         "  i = 0\r\n",
         "  costesN = []\r\n",
