--- a/Ricard_Ribalta_Actividad_Seminario_Algoritmos.ipynb
+++ b/Ricard_Ribalta_Actividad_Seminario_Algoritmos.ipynb
@@ -45,7 +45,9 @@
       "source": [
         "# Algoritmos de optimización - Seminario<br>\n",
         "Nombre y Apellidos: Ricard Ribalta Bargalló  <br>\n",
-        "Url:https://github.com/ricardribalta/03_MAIR_Algoritmos_de_Optimizacion<br>\n",
+        "Url GitHub:https://github.com/ricardribalta/03_MAIR_Algoritmos_de_Optimizacion<br>\n",
+        "Url_GoogleColab: https://drive.google.com/file/d/1I-Wq6MBnjBV1LsgSvPCHIriM8fgvH5Ly/view?usp=sharing\n",
+        "\n",
         "Problema:\n",
         "> 1. Organizar sesiones de doblaje <br>\n",
         ">2. Organizar los horarios de partidos de La Liga<br>\n",
@@ -292,7 +294,8 @@
       "metadata": {
         "id": "CJb5sQ0qkENy",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "outputId": "9b4bd204-50bb-4426-8aaf-85b34ce76121"
       },
@@ -388,7 +391,8 @@
       "metadata": {
         "id": "m1eyM21Vkabg",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "outputId": "1568ebb7-394e-4214-bbc6-40091ec4ea1b"
       },
@@ -742,7 +746,8 @@
       "metadata": {
         "id": "Jkx8GeiYlUz1",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "outputId": "949c69f4-92f5-4571-b74b-e2e764d08e19"
       },
