--- a/Ricard_Ribalta_Actividad_Seminario_Algoritmos.ipynb
+++ b/Ricard_Ribalta_Actividad_Seminario_Algoritmos.ipynb
@@ -248,7 +248,7 @@
         "#costs = costs[0:6] #para testear el codigo sin que se demore mucho\r\n",
         "tomas = 6\r\n"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -286,7 +286,7 @@
         "       \r\n",
         "    return numeroDesplazamientos"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -294,8 +294,7 @@
       "metadata": {
         "id": "CJb5sQ0qkENy",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "outputId": "9b4bd204-50bb-4426-8aaf-85b34ce76121"
       },
@@ -321,7 +320,7 @@
         "\r\n",
         "FuerzaBruta(costs, tomas)"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -391,8 +390,7 @@
       "metadata": {
         "id": "m1eyM21Vkabg",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "outputId": "1568ebb7-394e-4214-bbc6-40091ec4ea1b"
       },
@@ -575,7 +573,7 @@
         "\r\n",
         "sol  = recocido_simulado(costs, tomas, 100)      #-----------------------------"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -684,7 +682,7 @@
         "\r\n",
         "#random_costs = random_costs[0:5]   #para testear el codigo sin que se demore mucho"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -746,25 +744,24 @@
       "metadata": {
         "id": "Jkx8GeiYlUz1",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "outputId": "949c69f4-92f5-4571-b74b-e2e764d08e19"
       },
       "source": [
         "# Por fuerza vruta:\r\n",
-        "FuerzaBruta(random_costs, tomas)\r\n",
+        "FuerzaBruta(random_costs, sessions)\r\n",
         "\r\n",
         "# Por busqueda aleatoria:\r\n",
-        "solucion = busqueda_aleatoria(random_costs, 5, tomas) \r\n",
+        "solucion = busqueda_aleatoria(random_costs, 5, sessions) \r\n",
         "\r\n",
         "# Por busqueda local:\r\n",
-        "sol = busqueda_local(random_costs, tomas)\r\n",
+        "sol = busqueda_local(random_costs, sessions)\r\n",
         "\r\n",
         "# Por recocido simulado:\r\n",
-        "sol  = recocido_simulado(random_costs, tomas, 100)  \r\n"
+        "sol  = recocido_simulado(random_costs, sessions, 100)  \r\n"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
